<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    style="@style/MatchParent"
    android:fitsSystemWindows="true"

    tools:ignore="ContentDescription">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarGuide"
        android:layout_width="match_parent" android:layout_height="180dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="@style/MatchParent"
            android:fitsSystemWindows="true"
            android:background="@drawable/background_green"

            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView style="@style/MatchParent"
                android:src="@drawable/question"
                android:layout_marginBottom="?attr/actionBarSize"

                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/guideBar"
                android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"

                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/guideContent"
        style="@style/MatchParent"

        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout style="@style/WrapContent" android:orientation="vertical">
            <ImageView style="@style/Image" android:src="@drawable/user_guide_01" />
            <TextView  style="@style/Text"  android:text="@string/userGuide1"/>
            <ImageView style="@style/Image" android:src="@drawable/user_guide_02" />

            <TextView  style="@style/Text"  android:text="@string/userGuide2"/>
            <ImageView style="@style/Image" android:src="@drawable/user_guide_03" />
            <TextView  style="@style/Text"  android:text="@string/userGuide3"/>

            <TextView  style="@style/Text"  android:text="@string/userGuide4"/>
            <ImageView style="@style/Image" android:src="@drawable/user_guide_04" />
            <TextView  style="@style/Text"  android:text="@string/userGuide5"/>
            <ImageView style="@style/Image" android:src="@drawable/user_guide_05" />

            <TextView  style="@style/Text"  android:text="@string/userGuide6"/>
            <ImageView style="@style/Image" android:src="@drawable/user_guide_06" />

            <TextView  style="@style/Text"  android:text="@string/userGuide7"/>
            <ImageView style="@style/Image" android:src="@drawable/user_guide_07" />
            <TextView  style="@style/Text"  android:text="@string/userGuide8"/>
            <ImageView style="@style/Image" android:src="@drawable/user_guide_08" />

            <TextView  style="@style/Text"  android:text="@string/userGuide9_1"/>
            <TextView  style="@style/Text"  android:text="@string/userGuide9_2"/>
            <ImageView style="@style/Image" android:src="@drawable/user_guide_09" />
            <TextView  style="@style/Text"  android:text="@string/userGuide10"/>
            <ImageView style="@style/Image" android:src="@drawable/user_guide_10" />

            <TextView  style="@style/Text"  android:text="@string/userGuide11"/>
            <TextView  style="@style/Text"  android:text="@string/userGuide12"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabGuide"
        style="@style/WrapContent"
        android:layout_margin="16dp"

        app:layout_anchor="@id/appBarGuide"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@android:drawable/ic_menu_share" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>